Revert "HBASE-14728 TestRowCounter is broken in master (Abhishek Singh Chouhan)" Revert because I overcommitted, included files from another patch.
This reverts commit 47659200ac1d53590379ff431c428dffc07fd06a.